src/objects/ints__GDC_Verify_Data_Source_Record__c.object
<CustomObject>
    <fields>
        <fullName>ints__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__GDC_Verify_Record__c</fullName>
        <label>GDC Verify Record</label>
        <referenceTo>ints__GDC_Verify_Record__c</referenceTo>
        <relationshipLabel>GDC Verify Data Source Records</relationshipLabel>
        <relationshipName>GDC_Verify_Data_Source_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDC Verify Data Source Record</label>
    <nameField>
        <label>Data Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDC Verify Data Source Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>